crates/red_knot_python_semantic/resources/mdtest/snapshots/rich_comparison.md_-_Comparison___Rich_Comparison_-_Instance_Comparisons_with_not-boolable_types.snap
---
source: crates/red_knot_test/src/lib.rs
expression: snapshot
---
---
mdtest name: rich_comparison.md - Comparison: Rich Comparison - Instance Comparisons with not-boolable types
mdtest path: crates/red_knot_python_semantic/resources/mdtest/comparison/instances/rich_comparison.md
---

# Python source files

## mdtest_snippet.py

```
 1 | class NotBoolable:
 2 |     __bool__ = 3
 3 | 
 4 | class Comparable:
 5 |     def __lt__(self, item) -> NotBoolable:
 6 |         return NotBoolable()
 7 | 
 8 |     def __gt__(self, item) -> NotBoolable:
 9 |         return NotBoolable()
10 | 
11 | # error: [unsupported-bool-conversion]
12 | 10 < Comparable() < 20
13 | # error: [unsupported-bool-conversion]
14 | 10 < Comparable() < Comparable()
15 | 
16 | Comparable() < Comparable()  # fine
```

# Diagnostics

```
error: lint:unsupported-bool-conversion
  --> /src/mdtest_snippet.py:12:1
   |
11 | # error: [unsupported-bool-conversion]
12 | 10 < Comparable() < 20
   | ^^^^^^^^^^^^^^^^^ Boolean conversion is unsupported for type `NotBoolable`; it incorrectly implements `__bool__`
13 | # error: [unsupported-bool-conversion]
14 | 10 < Comparable() < Comparable()
   |

```

```
error: lint:unsupported-bool-conversion
  --> /src/mdtest_snippet.py:14:1
   |
12 | 10 < Comparable() < 20
13 | # error: [unsupported-bool-conversion]
14 | 10 < Comparable() < Comparable()
   | ^^^^^^^^^^^^^^^^^ Boolean conversion is unsupported for type `NotBoolable`; it incorrectly implements `__bool__`
15 |
16 | Comparable() < Comparable()  # fine
   |

```
